feat: adiciona header e logo no projeto

--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
 </head>
 
 <body class="">
-
+  <header id="header">
+    <div class="wrapper_logo ">
+      <i class="ph ph-shopping-cart logo"></i>
+      <span>
+        Hora das Compras
+      </span>
+    </div>
+  </header>
   <main class="container">
     <h2 class="container__title">Minhas Listas</h2>
     <div class="container__intput_area flex">
