refactor: modifica texto do html

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
     </div>
   </header>
   <main class="container">
-    <h2 class="container__title">Minhas Listas</h2>
+    <h2 class="container__title">Sua Lista</h2>
     <div class="container__intput_area flex">
-      <input type="text" id="list_input" placeholder="Digite um nome para sua lista">
-      <button id="add-btn" class="btn" title="Adicionar uma lista" aria-label="criar uma nova lista" disabled>
+      <input type="text" id="list_input" placeholder="Adicionar um novo item....">
+      <button id="add-btn" class="btn" title="Adicionar novo item" aria-label="criar novo item" disabled>
         <i class="icon ph ph-plus"></i>
-        Nova lista
+        Novo item
       </button>
     </div>
     <section class="wrapper_list">
