--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="author" content="Alexsandro Silva">
+  <meta name="title" content="Lista de Compras Compartilhaveis - Crie e edite suas listas facilmente">
+  <meta name="description"
+    content="Organize sua vida com o Lista de Compras Compartilhaveis — uma forma simples e rápida de criar, editar e salvar listas.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>LCC | Home</title>
   <!-- google font -->
@@ -21,68 +25,53 @@
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </head>
 
-<body class="">
+<body>
   <header id="header" class="flex">
-    <div class="wrapper_logo ">
+    <a href="/" class="wrapper_logo ">
       <i class="ph ph-shopping-cart logo"></i>
       <span>
         Hora das Compras
       </span>
-    </div>
-    <!-- icone do dark -->
-    <div class="toggle">
-      <input id="switch" type="checkbox" name="theme" />
-      <label for="switch" title="Alternar tema" aria-label="Alternar entre modo claro e escuro">
-        <svg id='sun' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256">
-          <path
-            d="M120,40V16a8,8,0,0,1,16,0V40a8,8,0,0,1-16,0Zm72,88a64,64,0,1,1-64-64A64.07,64.07,0,0,1,192,128Zm-16,0a48,48,0,1,0-48,48A48.05,48.05,0,0,0,176,128ZM58.34,69.66A8,8,0,0,0,69.66,58.34l-16-16A8,8,0,0,0,42.34,53.66Zm0,116.68-16,16a8,8,0,0,0,11.32,11.32l16-16a8,8,0,0,0-11.32-11.32ZM192,72a8,8,0,0,0,5.66-2.34l16-16a8,8,0,0,0-11.32-11.32l-16,16A8,8,0,0,0,192,72Zm5.66,114.34a8,8,0,0,0-11.32,11.32l16,16a8,8,0,0,0,11.32-11.32ZM48,128a8,8,0,0,0-8-8H16a8,8,0,0,0,0,16H40A8,8,0,0,0,48,128Zm80,80a8,8,0,0,0-8,8v24a8,8,0,0,0,16,0V216A8,8,0,0,0,128,208Zm112-88H216a8,8,0,0,0,0,16h24a8,8,0,0,0,0-16Z">
-          </path>
-        </svg>
-        <svg id='moon' class="" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256">
-          <path
-            d="M240,96a8,8,0,0,1-8,8H216v16a8,8,0,0,1-16,0V104H184a8,8,0,0,1,0-16h16V72a8,8,0,0,1,16,0V88h16A8,8,0,0,1,240,96ZM144,56h8v8a8,8,0,0,0,16,0V56h8a8,8,0,0,0,0-16h-8V32a8,8,0,0,0-16,0v8h-8a8,8,0,0,0,0,16Zm72.77,97a8,8,0,0,1,1.43,8A96,96,0,1,1,95.07,37.8a8,8,0,0,1,10.6,9.06A88.07,88.07,0,0,0,209.14,150.33,8,8,0,0,1,216.77,153Zm-19.39,14.88c-1.79.09-3.59.14-5.38.14A104.11,104.11,0,0,1,88,64c0-1.79,0-3.59.14-5.38A80,80,0,1,0,197.38,167.86Z">
-          </path>
-        </svg>
-      </label>
-    </div>
+    </a>
+    <nav>
+      <div class="toggle">
+        <label for="switchThemeDark" title="Alternar tema" aria-label="Alternar entre modo claro e escuro">
+          <input id="switchThemeDark" type="checkbox" name="theme" />
+          <svg id='sun' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256">
+            <path
+              d="M120,40V16a8,8,0,0,1,16,0V40a8,8,0,0,1-16,0Zm72,88a64,64,0,1,1-64-64A64.07,64.07,0,0,1,192,128Zm-16,0a48,48,0,1,0-48,48A48.05,48.05,0,0,0,176,128ZM58.34,69.66A8,8,0,0,0,69.66,58.34l-16-16A8,8,0,0,0,42.34,53.66Zm0,116.68-16,16a8,8,0,0,0,11.32,11.32l16-16a8,8,0,0,0-11.32-11.32ZM192,72a8,8,0,0,0,5.66-2.34l16-16a8,8,0,0,0-11.32-11.32l-16,16A8,8,0,0,0,192,72Zm5.66,114.34a8,8,0,0,0-11.32,11.32l16,16a8,8,0,0,0,11.32-11.32ZM48,128a8,8,0,0,0-8-8H16a8,8,0,0,0,0,16H40A8,8,0,0,0,48,128Zm80,80a8,8,0,0,0-8,8v24a8,8,0,0,0,16,0V216A8,8,0,0,0,128,208Zm112-88H216a8,8,0,0,0,0,16h24a8,8,0,0,0,0-16Z">
+            </path>
+          </svg>
+          <svg id='moon' class="" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256">
+            <path
+              d="M240,96a8,8,0,0,1-8,8H216v16a8,8,0,0,1-16,0V104H184a8,8,0,0,1,0-16h16V72a8,8,0,0,1,16,0V88h16A8,8,0,0,1,240,96ZM144,56h8v8a8,8,0,0,0,16,0V56h8a8,8,0,0,0,0-16h-8V32a8,8,0,0,0-16,0v8h-8a8,8,0,0,0,0,16Zm72.77,97a8,8,0,0,1,1.43,8A96,96,0,1,1,95.07,37.8a8,8,0,0,1,10.6,9.06A88.07,88.07,0,0,0,209.14,150.33,8,8,0,0,1,216.77,153Zm-19.39,14.88c-1.79.09-3.59.14-5.38.14A104.11,104.11,0,0,1,88,64c0-1.79,0-3.59.14-5.38A80,80,0,1,0,197.38,167.86Z">
+            </path>
+          </svg>
+        </label>
+      </div>
+    </nav>
   </header>
-  <main class="container">
-    <h2 class="container__title">Sua Lista</h2>
-    <div class="container__intput_area flex">
-      <input type="text" id="list_input" placeholder="Adicionar um novo item....">
-      <button id="add-btn" class="btn" title="Adicionar novo item" aria-label="criar novo item" disabled>
-        <i class="icon ph ph-plus"></i>
-        Novo item
-      </button>
-    </div>
-    <section class="wrapper_list">
-      <ul id="merc-list" class="wrapper_list__daily_list"></ul>
-    </section>
-    <!-- <section class="wrapper_list">
-      <h3 class="wrapper_list__title">13.08.25</h3>
-      <ul id="lists" class="wrapper_list__daily_list">
-        <li>
-          <span>lista de compras do guanabara de campo grande</span>
-          <button class="remove-btn">×</button>
-        </li>
-        <li>
-          <span>Teste</span>
-          <button class="remove-btn">×</button>
-        </li>
-      </ul>
+  <main id="main">
+    <section id="listEmpty">
 
-      <h3 class="wrapper_list__title">12.08.25</h3>
-      <ul class="wrapper_list__daily_list">
-        <li>
-          <span>Teste</span>
-          <button class="remove-btn">×</button>
-        </li>
-        <li>
-          <span>Teste</span>
-          <button class="remove-btn">×</button>
-        </li>
-      </ul>
-    </section> -->
+    </section>
+    <button id="createList" class="flex btn">
+      <i class="circle icon ph ph-plus"></i>
+      Criar uma nova lista
+    </button>
+
+    <div class="modal " role="dialog" aria-modal="true" aria-labelledby="modalTitle">
+      <div class="modal__overlay"></div>
+      <div class="modal__content">
+        <div class="modal__content__header">
+
+          <button id='close_modal' class="modal__content__close" aria-label="Fechar modal">&times;</button>
+        </div>
+        <div class="modal__content__body"></div>
+        <!-- conteudo vindo via js -->
+      </div>
+    </div>
+
   </main>
   <script type="module" src="./src/js/main.js" defer></script>
 </body>
