style: add favicon

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/regular/style.css" />
   <link rel="stylesheet" type="text/css"
     href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/fill/style.css" />
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="./src/assets/favicon/favicon.ico" type="image/x-icon">
   <!-- CSS -->
   <link rel="stylesheet" href="./src/css/main.css">
   <!-- Jquery -->
