--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description"
     content="Organize sua vida com o Lista de Compras Compartilhaveis — uma forma simples e rápida de criar, editar e salvar listas.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Listas | Tudo na sacola</title>
+  <title>Tudo na sacola</title>
   <!-- google font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,45 +26,26 @@
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </head>
 <body>
-  <header id="headerTop">
-    <nav class="navbar flex">
-      <a href="#" class="navbar_brand">
-        <img src="./src/assets/img/logo.png" alt="logo da aplicação tudo dentro da sacola">
-      </a>
-      <ul class="navbar_nav">
-        <li class="nav_item toggle">
-          <label for="switchThemeDark" title="Alternar tema" aria-label="Alternar entre modo claro e escuro">
-            <input id="switchThemeDark" type="checkbox" name="theme" />
-            <svg id='sun' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256">
-              <path
-                d="M120,40V16a8,8,0,0,1,16,0V40a8,8,0,0,1-16,0Zm72,88a64,64,0,1,1-64-64A64.07,64.07,0,0,1,192,128Zm-16,0a48,48,0,1,0-48,48A48.05,48.05,0,0,0,176,128ZM58.34,69.66A8,8,0,0,0,69.66,58.34l-16-16A8,8,0,0,0,42.34,53.66Zm0,116.68-16,16a8,8,0,0,0,11.32,11.32l16-16a8,8,0,0,0-11.32-11.32ZM192,72a8,8,0,0,0,5.66-2.34l16-16a8,8,0,0,0-11.32-11.32l-16,16A8,8,0,0,0,192,72Zm5.66,114.34a8,8,0,0,0-11.32,11.32l16,16a8,8,0,0,0,11.32-11.32ZM48,128a8,8,0,0,0-8-8H16a8,8,0,0,0,0,16H40A8,8,0,0,0,48,128Zm80,80a8,8,0,0,0-8,8v24a8,8,0,0,0,16,0V216A8,8,0,0,0,128,208Zm112-88H216a8,8,0,0,0,0,16h24a8,8,0,0,0,0-16Z">
-              </path>
-            </svg>
-            <svg id='moon' class="" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256">
-              <path
-                d="M240,96a8,8,0,0,1-8,8H216v16a8,8,0,0,1-16,0V104H184a8,8,0,0,1,0-16h16V72a8,8,0,0,1,16,0V88h16A8,8,0,0,1,240,96ZM144,56h8v8a8,8,0,0,0,16,0V56h8a8,8,0,0,0,0-16h-8V32a8,8,0,0,0-16,0v8h-8a8,8,0,0,0,0,16Zm72.77,97a8,8,0,0,1,1.43,8A96,96,0,1,1,95.07,37.8a8,8,0,0,1,10.6,9.06A88.07,88.07,0,0,0,209.14,150.33,8,8,0,0,1,216.77,153Zm-19.39,14.88c-1.79.09-3.59.14-5.38.14A104.11,104.11,0,0,1,88,64c0-1.79,0-3.59.14-5.38A80,80,0,1,0,197.38,167.86Z">
-              </path>
-            </svg>
-          </label>
-        </li>
-      </ul>
-    </nav>
-  </header>
-  <main id="main">
-    <div class="viewport_box">
-      <section class="wrapper_search">
-        <button id="createList" class="btn btn_primary btn_small"><i class="ph ph-plus"></i>Nova Lista
-        </button>
+  <main id="home_main">
+    <div class="viewport_box flex">
+      <section class="hero">
+        <img src="./src/assets/img/logo.png" alt="logo da aplicação"
+        class="logo">
+
+        <h1 class="title">Tudo na sacola</h1>
+        <p>
+          O jeito mais simples e organizado de gerenciar suas listas de compras. Crie, organize e marque itens como
+          comprados onde quer que você esteja.
+        </p>
       </section>
-      <section id="wrapper_lists" class="scroll_ghost"></section>
-    </div>
-    <div class="modal " role="dialog" aria-modal="true" aria-labelledby="modalTitle">
-      <div class="modal__overlay"></div>
-      <div class="modal__content">
-        <div class="modal__content__header">
-          <button id='close_modal' class="modal__content__close" aria-label="Fechar modal">&times;</button>
-        </div>
-        <div class="modal__content__body"></div>
+      <div class="box_start">
+        <h2>Pronto para começar</h2>
+        <p>
+          Crie suas listas e experimente a praticidade de ter tudo organizado em um só lugar.
+        </p>
+        <a href="./src/pages/lists.html"
+        title="criar sua lista"
+        class="btn">Criar sua lista</a>
       </div>
     </div>
   </main>
