--- a/src/pages/lists.html
+++ b/src/pages/lists.html
@@ -7,7 +7,7 @@
   <meta name="description"
     content="Organize sua vida com o Lista de Compras Compartilhaveis — uma forma simples e rápida de criar, editar e salvar listas.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>LCC | Adicione Item</title>
+  <title>Listas | Tudo na sacola</title>
   <!-- google font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,14 +19,14 @@
   <link rel="stylesheet" type="text/css"
     href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/fill/style.css" />
   <!-- Favicon -->
-  <link rel="shortcut icon" href="../src/assets/favicon/favicon.ico" type="image/x-icon"> <!-- CSS -->
+  <link rel="shortcut icon" href="../assets/favicon/favicon.ico" type="image/x-icon">
+  <!-- CSS -->
   <link rel="stylesheet" href="../css/main.css">
   <!-- Jquery -->
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </head>
-
 <body>
-  <header id="">
+  <header id="headerTop">
     <nav class="navbar flex">
       <a href="#" class="navbar_brand">
         <img src="../assets/img/logo.png" alt="logo da aplicação tudo dentro da sacola">
@@ -51,14 +51,12 @@
     </nav>
   </header>
   <main id="main">
-    <div class="viewport_box flex">
-      <h3>
-        Opa, este lado ainda está em contrução.
-      </h3>
-      <a href="/">
-        <i class="ph ph-arrow-left"></i>
-        voltar para suas listas
-      </a>
+    <div class="viewport_box">
+      <section class="wrapper_search">
+        <button id="createList" class="btn btn_primary btn_small"><i class="ph ph-plus"></i>Nova Lista
+        </button>
+      </section>
+      <section id="wrapper_lists" class="scroll_ghost"></section>
     </div>
     <div class="modal " role="dialog" aria-modal="true" aria-labelledby="modalTitle">
       <div class="modal__overlay"></div>
@@ -67,7 +65,6 @@
           <button id='close_modal' class="modal__content__close" aria-label="Fechar modal">&times;</button>
         </div>
         <div class="modal__content__body"></div>
-        <!-- conteudo vindo via js -->
       </div>
     </div>
   </main>
