feat: adiciona listdetails estatico

--- a/src/pages/lists.html
+++ b/src/pages/lists.html
@@ -28,7 +28,7 @@
 <body>
   <header id="headerTop">
     <nav class="navbar flex">
-      <a href="#" class="navbar_brand">
+      <a href="./lists.html" class="navbar_brand">
         <img src="../assets/img/logo.png" alt="logo da aplicação tudo dentro da sacola">
       </a>
       <ul class="navbar_nav">
