--- a/src/pages/list-detail.html
+++ b/src/pages/list-detail.html
@@ -38,52 +38,135 @@
         <div class="navbar_brand">
           <img src="../assets/img/logo.png" alt="logo da aplicação tudo dentro da sacola">
         </div>
-        <h2 class="title-elipse">vindo do js</h2>
+        <h2 class="text-elipse">vindo do js</h2>
         <!-- colocar para construir com js -->
       </div>
 
-      <div class="navbar__actions_buttons">
-        <button id="toShare" class="btn btn_small btn_secondary"><i class="ph ph-export"></i>
-          <span>Compartilhar</span></button>
-        <button id="createItem" class="btn btn_small btn_primary">
-          <i class="ph ph-plus"></i>
-          <span>Adicionar Item</span></button>
-      </div>
+      <ul class="navbar_nav">
+        <li class="navbar__actions_buttons">
+          <button id="toShare" title="Compartilhar" class="btn btn_small btn_secondary"><i class="ph ph-export"></i>
+            <span>Compartilhar</span></button>
+          <button id="createItem" title="Adicionar" class="btn btn_small btn_primary">
+            <i class="ph ph-plus"></i>
+            <span>Adicionar Item</span></button>
+        </li>
+        <li class="nav_item toggle">
+          <label for="switchThemeDark" title="Alternar tema" aria-label="Alternar entre modo claro e escuro">
+            <input id="switchThemeDark" type="checkbox" name="theme" />
+            <svg id='sun' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256">
+              <path
+                d="M120,40V16a8,8,0,0,1,16,0V40a8,8,0,0,1-16,0Zm72,88a64,64,0,1,1-64-64A64.07,64.07,0,0,1,192,128Zm-16,0a48,48,0,1,0-48,48A48.05,48.05,0,0,0,176,128ZM58.34,69.66A8,8,0,0,0,69.66,58.34l-16-16A8,8,0,0,0,42.34,53.66Zm0,116.68-16,16a8,8,0,0,0,11.32,11.32l16-16a8,8,0,0,0-11.32-11.32ZM192,72a8,8,0,0,0,5.66-2.34l16-16a8,8,0,0,0-11.32-11.32l-16,16A8,8,0,0,0,192,72Zm5.66,114.34a8,8,0,0,0-11.32,11.32l16,16a8,8,0,0,0,11.32-11.32ZM48,128a8,8,0,0,0-8-8H16a8,8,0,0,0,0,16H40A8,8,0,0,0,48,128Zm80,80a8,8,0,0,0-8,8v24a8,8,0,0,0,16,0V216A8,8,0,0,0,128,208Zm112-88H216a8,8,0,0,0,0,16h24a8,8,0,0,0,0-16Z">
+              </path>
+            </svg>
+            <svg id='moon' class="" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256">
+              <path
+                d="M240,96a8,8,0,0,1-8,8H216v16a8,8,0,0,1-16,0V104H184a8,8,0,0,1,0-16h16V72a8,8,0,0,1,16,0V88h16A8,8,0,0,1,240,96ZM144,56h8v8a8,8,0,0,0,16,0V56h8a8,8,0,0,0,0-16h-8V32a8,8,0,0,0-16,0v8h-8a8,8,0,0,0,0,16Zm72.77,97a8,8,0,0,1,1.43,8A96,96,0,1,1,95.07,37.8a8,8,0,0,1,10.6,9.06A88.07,88.07,0,0,0,209.14,150.33,8,8,0,0,1,216.77,153Zm-19.39,14.88c-1.79.09-3.59.14-5.38.14A104.11,104.11,0,0,1,88,64c0-1.79,0-3.59.14-5.38A80,80,0,1,0,197.38,167.86Z">
+              </path>
+            </svg>
+          </label>
+        </li>
+      </ul>
     </nav>
   </header>
   <main>
     <div class="viewport_box">
-
-      <section class="stats">
-        <div class="stat__box">
-          <div class="stat__box__header">
+      <section id="stats">
+        <div class="stat__box shadow">
+          <header class="stat__header">
             <span>Total de Itens</span>
-          </div>
-          <div class="stat__box__fotter flex">
+          </header>
+          <footer class="stat__footer">
             <strong>5</strong>
-            <i>icone</i>
-          </div>
+            <div class="circle">
+              <i class="ph ph-shopping-bag-open"></i>
+            </div>
+          </footer>
         </div>
-        <div class="stat__box">
-          <div class="stat__box__header">
+
+        <div class="stat__box shadow">
+          <header class="stat__header">
             <span>Itens Comprados</span>
-          </div>
-          <div class="stat__box__fotter flex">
+          </header>
+          <footer class="stat__footer">
             <strong>3</strong>
-            <i>icone</i>
-          </div>
+            <div class="circle">
+              <i class="ph ph-check"></i>
+            </div>
+          </footer>
         </div>
-        <div class="stat__box">
-          <div class="stat__box__header">
+
+        <div class="stat__box shadow">
+          <header class="stat__header">
             <span>Valor Total</span>
-          </div>
-          <div class="stat__box__fotter flex">
-            <strong>R$ 611,00</strong>
-            <i>icone</i>
-          </div>
+          </header>
+          <footer class="stat__footer">
+            <strong>R$: 500,00</strong>
+            <div class="circle">
+              <i class="ph ph-calculator"></i>
+            </div>
+          </footer>
         </div>
       </section>
-      <section></section>
+
+      <section id="wrapperItem" class="cards empty">
+
+
+        <!-- mensagem lista vazia
+        <div class='empty'>
+          <i class="icon ph ph-warning-octagon"></i>
+          <h1>Lista vazia</h1>
+          <p>Adicione seu primeiro item para começar</p>
+          <button id="createItem" title="Adicionar" class="btn btn_small btn_primary">
+            <i class="ph ph-plus"></i>
+            <span>Adicionar Primeiro Item</span></button>
+        </div> -->
+
+
+
+
+        <!-- pronto para o jquery
+        
+        <article class="card shadow">
+          <header class="card__header">
+            <h3>Arroz</h3>
+            <div class="circle"><i class="ph ph-shopping-bag-open"></i></div>
+          </header>
+          <section class="meta" aria-label="Informações do produto">
+            <dl>
+              <dt>Preço unitário:</dt>
+              <dd>R$ ${price}</dd>
+              <dt>Quantidade:</dt>
+              <dd>${qty}x</dd>
+            </dl>
+          </section>
+          <hr />
+          <p class="total" aria-label="Total">
+            <span>Total:</span>
+            <span class="value">R$ ${total}</span>
+          </p>
+          <footer class="card-footer">
+            <button class="btn_icon_only toEdit" data-id="${item.id}" type="button" aria-label="Editar produto">
+              <i class="ph ph-pencil-simple-line"></i>
+            </button>
+            <button class="btn_icon_only toDelete" data-id="${item.id}" type="button" aria-label="Remover produto">
+              <i class="ph ph-trash"></i>
+            </button>
+          </footer>
+        </article>
+         -->
+      </section>
+
+
+    </div>
+    <!-- modal -->
+    <div class="modal " role="dialog" aria-modal="true" aria-labelledby="modalTitle">
+      <div class="modal__overlay"></div>
+      <div class="modal__content">
+        <div class="modal__content__header">
+          <button id='close_modal' class="modal__content__close" aria-label="Fechar modal">&times;</button>
+        </div>
+        <div class="modal__content__body"></div>
+      </div>
     </div>
   </main>
   <script type="module" src="../js/app.js" defer></script>
