feat: logica de abrir modal add abrir modal de item add abrir modal de compartilha corrige style de stats

--- a/src/pages/lists.html
+++ b/src/pages/lists.html
@@ -35,7 +35,7 @@
         <li class="nav_item toggle">
           <label for="switchThemeDark" title="Alternar tema" aria-label="Alternar entre modo claro e escuro">
             <input id="switchThemeDark" type="checkbox" name="theme" />
-            <i id="icon-theme-on" class="icon ph ph-sun"></i>
+            <i id="icon-theme-on" class="icon ph"></i>
           </label>
         </li>
         </li>
