--- a/src/pages/lists.html
+++ b/src/pages/lists.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="author" content="Alexsandro Silva">
@@ -42,7 +43,7 @@
       </ul>
     </nav>
   </header>
-  <main id="main">
+  <main id="main content">
     <div class="viewport_box">
       <section class="wrapper_search">
         <button id="createList" class="btn btn_primary btn_small"><i class="ph ph-plus"></i>Nova Lista
@@ -61,5 +62,9 @@
     </div>
   </main>
   <script type="module" src="../js/app.js" defer></script>
+  <div id="loading">
+    <i class="ph ph-spinner-gap spinner-icon"></i>
+  </div>
 </body>
+
 </html>
