style: adiciona icone

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
           Crie suas listas e experimente a praticidade de ter tudo organizado em um só lugar.
         </p>
         <a href="./src/pages/lists.html"
-        title="criar sua lista"
-        class="btn">Criar sua lista</a>
+        title="Iniciar"
+        class="btn">Iniciar</a>
       </div>
     </div>
   </main>
