feat: add render do nome da lista

--- a/src/pages/list-detail.html
+++ b/src/pages/list-detail.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
   <meta charset="UTF-8">
   <meta name="author" content="Alexsandro Silva">
@@ -26,26 +25,24 @@
   <!-- Jquery -->
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </head>
-
 <body>
   <header>
     <nav class="navbar flex">
       <div id="navbar__left">
-        <!-- colocar para construir com js -->
         <a href="./lists.html">
           <i class="ph ph-arrow-left"></i>
         </a>
         <div class="navbar_brand">
           <img src="../assets/img/logo.png" alt="logo da aplicação tudo dentro da sacola">
         </div>
-        <h2 class="text-elipse">vindo do js</h2>
-        <!-- colocar para construir com js -->
+        <h2 class="text-elipse"></h2>
       </div>
 
       <ul class="navbar_nav">
         <li class="navbar__actions_buttons">
-          <button id="toShare" title="Compartilhar" class="btn btn_small btn_secondary"><i class="ph ph-export"></i>
-            <span>Compartilhar</span></button>
+          <!-- <button id="toShare" title="Compartilhar" class="btn btn_small btn_secondary"><i class="ph ph-export"></i>
+            <span>Compartilhar</span>
+          </button> -->
           <button id="createItem" title="Adicionar" class="btn btn_small btn_primary">
             <i class="ph ph-plus"></i>
             <span>Adicionar Item</span></button>
@@ -146,8 +143,6 @@
         </article>
          -->
       </section>
-
-
     </div>
     <!-- modal -->
     <div class="modal " role="dialog" aria-modal="true" aria-labelledby="modalTitle">
@@ -165,5 +160,4 @@
   </main>
   <script type="module" src="../js/app.js" defer></script>
 </body>
-
 </html>
