--- a/src/pages/list-detail.html
+++ b/src/pages/list-detail.html
@@ -39,14 +39,17 @@
       </div>
 
       <ul class="navbar_nav">
-        <li class="navbar__actions_buttons">
-          <!-- <button id="toShare" title="Compartilhar" class="btn btn_small btn_secondary"><i class="ph ph-export"></i>
+        <!-- <li class="navbar__actions_buttons">
+          <button id="toShare" title="Compartilhar" class="btn btn_small btn_secondary"><i class="ph ph-export"></i>
             <span>Compartilhar</span>
-          </button> -->
+          </button>
+        </li> -->
+        <li class="navbar__actions_buttons">
           <button id="createItem" title="Adicionar" class="btn btn_small btn_primary">
             <i class="ph ph-plus"></i>
             <span>Adicionar Item</span></button>
         </li>
+
         <li class="nav_item toggle">
           <label for="switchThemeDark" title="Alternar tema" aria-label="Alternar entre modo claro e escuro">
             <input id="switchThemeDark" type="checkbox" name="theme" />
@@ -59,44 +62,24 @@
   <main id="content">
     <div class="viewport_box">
       <section id="stats">
-        <div class="stat__box shadow">
+        <div id="totalItem" class="stat__box shadow">
           <header class="stat__header">
             <span>Total de Itens</span>
           </header>
-          <footer class="stat__footer">
-            <strong>5</strong>
-            <div class="circle">
-              <i class="ph ph-shopping-bag-open"></i>
-            </div>
-          </footer>
         </div>
-
-        <div class="stat__box shadow">
+        <div id="itemDone" class="stat__box shadow">
           <header class="stat__header">
             <span>Itens Comprados</span>
           </header>
-          <footer class="stat__footer">
-            <strong>3</strong>
-            <div class="circle">
-              <i class="ph ph-check"></i>
-            </div>
-          </footer>
         </div>
-
-        <div class="stat__box shadow">
+        <div id="preco" class="stat__box shadow">
           <header class="stat__header">
             <span>Valor Total</span>
           </header>
-          <footer class="stat__footer">
-            <strong>R$: 500,00</strong>
-            <div class="circle">
-              <i class="ph ph-receipt"></i>
-            </div>
-          </footer>
         </div>
       </section>
 
-      <section id="wrapperItem" class="cards empty">
+      <section id="wrapperItem" class="cards">
 
 
         <!-- mensagem lista vazia
@@ -114,33 +97,7 @@
 
         <!-- pronto para o jquery
         
-        <article class="card shadow">
-          <header class="card__header">
-            <h3>Arroz</h3>
-            <div class="circle"><i class="ph ph-shopping-bag-open"></i></div>
-          </header>
-          <section class="meta" aria-label="Informações do produto">
-            <dl>
-              <dt>Preço unitário:</dt>
-              <dd>R$ ${price}</dd>
-              <dt>Quantidade:</dt>
-              <dd>${qty}x</dd>
-            </dl>
-          </section>
-          <hr />
-          <p class="total" aria-label="Total">
-            <span>Total:</span>
-            <span class="value">R$ ${total}</span>
-          </p>
-          <footer class="card-footer">
-            <button class="btn_icon_only toEdit" data-id="${item.id}" type="button" aria-label="Editar produto">
-              <i class="ph ph-pencil-simple-line"></i>
-            </button>
-            <button class="btn_icon_only toDelete" data-id="${item.id}" type="button" aria-label="Remover produto">
-              <i class="ph ph-trash"></i>
-            </button>
-          </footer>
-        </article>
+        
          -->
       </section>
     </div>
