feat marca item como comprado

--- a/src/pages/list-detail.html
+++ b/src/pages/list-detail.html
@@ -62,44 +62,12 @@
   <main id="content">
     <div class="viewport_box">
       <section id="stats">
-        <div id="totalItem" class="stat__box shadow">
-          <header class="stat__header">
-            <span>Total de Itens</span>
-          </header>
-        </div>
-        <div id="itemDone" class="stat__box shadow">
-          <header class="stat__header">
-            <span>Itens Comprados</span>
-          </header>
-        </div>
-        <div id="preco" class="stat__box shadow">
-          <header class="stat__header">
-            <span>Valor Total</span>
-          </header>
-        </div>
+        <article id="totalItem" class="stat__box shadow">      </article>
+        <article id="itemDone" class="stat__box shadow"></article>
+        <article id="preco" class="stat__box shadow">       </article>
       </section>
 
-      <section id="wrapperItem" class="cards">
-
-
-        <!-- mensagem lista vazia
-        <div class='empty'>
-          <i class="icon ph ph-warning-octagon"></i>
-          <h1>Lista vazia</h1>
-          <p>Adicione seu primeiro item para começar</p>
-          <button id="createItem" title="Adicionar" class="btn btn_small btn_primary">
-            <i class="ph ph-plus"></i>
-            <span>Adicionar Primeiro Item</span></button>
-        </div> -->
-
-
-
-
-        <!-- pronto para o jquery
-        
-        
-         -->
-      </section>
+      <section id="wrapperItem" class="cards"></section>
     </div>
     <!-- modal -->
     <div class="modal " role="dialog" aria-modal="true" aria-labelledby="modalTitle">
