feat: adiciona versao 1.0.0

--- a/index.html
+++ b/index.html
@@ -29,26 +29,21 @@
   <main id="home_main">
     <div class="viewport_box flex">
       <section class="hero">
-        <img src="./src/assets/img/logo.png" alt="logo da aplicação"
-        class="logo">
+        <img src="./src/assets/img/logo.png" alt="logo da aplicação" class="logo">
 
         <h1 class="title">Tudo na sacola</h1>
         <p>
-          O jeito mais simples e organizado de gerenciar suas listas de compras. Crie, organize e marque itens como
-          comprados onde quer que você esteja.
+          O jeito mais simples de gerenciar suas listas de compras. Adicione itens com nome, valor e quantidade, marque o que já comprou e acompanhe o total gasto sem complicação. Rápido, prático e sem estresse.
         </p>
       </section>
       <div class="box_start">
-        <h2>Pronto para começar</h2>
+        <h2>Pronto para começar ?</h2>
         <p>
-          Crie suas listas e experimente a praticidade de ter tudo organizado em um só lugar.
+          Crie suas listas e descubra como é fácil ter tudo organizado em um só lugar.
         </p>
-        <a href="./src/pages/lists.html"
-        title="Iniciar"
-        class="btn">Iniciar</a>
+        <a href="./src/pages/lists.html" title="Começar agora" class="btn">Começar agora</a>
       </div>
     </div>
   </main>
-  <script type="module" src="./src/js/app.js" defer></script>
 </body>
 </html>
