--- a/src/pages/list-detail.html
+++ b/src/pages/list-detail.html
@@ -62,9 +62,9 @@
   <main id="content">
     <div class="viewport_box">
       <section id="stats">
-        <article id="totalItem" class="stat__box shadow">      </article>
+        <article id="totalItem" class="stat__box shadow"> </article>
         <article id="itemDone" class="stat__box shadow"></article>
-        <article id="preco" class="stat__box shadow">       </article>
+        <article id="preco" class="stat__box shadow"> </article>
       </section>
 
       <section id="wrapperItem" class="cards"></section>
@@ -81,6 +81,7 @@
     </div>
     <div id="loading">
       <i class="ph ph-spinner-gap spinner-icon"></i>
+      <p>Aguenta aí, tô buscando seus dados...</p>
     </div>
   </main>
   <script type="module" src="../js/app.js" defer></script>
