--- a/src/pages/lists.html
+++ b/src/pages/lists.html
@@ -63,6 +63,7 @@
   <script type="module" src="../js/app.js" defer></script>
   <div id="loading">
     <i class="ph ph-spinner-gap spinner-icon"></i>
+    <p>Aguenta aí, tô buscando seus dados...</p>
   </div>
 </body>
 </html>
