--- a/src/pages/list-detail.html
+++ b/src/pages/list-detail.html
@@ -26,7 +26,7 @@
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </head>
 <body>
-  <header>
+  <header id="fixed">
     <nav class="navbar flex">
       <div id="navbar__left">
         <a href="./lists.html">
@@ -39,18 +39,17 @@
       </div>
 
       <ul class="navbar_nav">
-        <!-- <li class="navbar__actions_buttons">
-          <button id="toShare" title="Compartilhar" class="btn btn_small btn_secondary"><i class="ph ph-export"></i>
+         <li class="nav_item navbar__actions_buttons">
+          <button id="toShare" title="Compartilhar" class="btn btn_extasmall btn_secondary"><i class="ph ph-export"></i>
             <span>Compartilhar</span>
           </button>
-        </li> -->
-        <li class="navbar__actions_buttons">
-          <button id="createItem" title="Adicionar" class="btn btn_small btn_primary">
+        </li>
+        <li class="nav_item navbar__actions_buttons">
+          <button id="createItem" title="Adicionar" class="btn btn_extasmall btn_primary">
             <i class="ph ph-plus"></i>
             <span>Adicionar Item</span></button>
         </li>
-
-        <li class="nav_item toggle">
+        <li class="nav_item toggleTheme">
           <label for="switchThemeDark" title="Alternar tema" aria-label="Alternar entre modo claro e escuro">
             <input id="switchThemeDark" type="checkbox" name="theme" />
             <i id="icon-theme-on" class="icon ph"></i>
@@ -59,7 +58,7 @@
       </ul>
     </nav>
   </header>
-  <main id="content">
+  <main id="content" class="space_to_header">
     <div class="viewport_box">
       <section id="stats">
         <article id="totalItem" class="stat__box shadow"> </article>
