feat: adiciona pages privacidade cookie sobre

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 
         <h1 class="title">Tudo na sacola</h1>
         <p>
-          O jeito mais simples de gerenciar suas listas de compras. Adicione itens com nome, valor e quantidade, marque o que já comprou e acompanhe o total gasto sem complicação. Rápido, prático e sem estresse.
+          O jeito mais simples de gerenciar suas listas de compras. Adicione itens com nome, valor e quantidade, marque
+          o que já comprou e acompanhe o total gasto sem complicação. Rápido, prático e sem estresse.
         </p>
       </section>
       <div class="box_start">
@@ -45,5 +46,21 @@
       </div>
     </div>
   </main>
+  <footer>
+    <div class="viewport_box">
+    <section>
+      <a href="./src/pages/privacy.html">Política de Privacidade</a>
+      <i class="ph ph-line-vertical"></i>
+      <a href="./src/pages/cookie.html">Política de Cookies</a>
+      <i class="ph ph-line-vertical"></i>
+      <a href="./src/pages/about.html">Sobre Tudo na sacola</a>
+    </section>
+    <section>
+      <p>
+        © 2025 <a href="https://www.linkedin.com/in/dasilva-alexsandro/">Alexsandro Silva</a>
+      </p>
+    </section>
+    </div>
+  </footer>
 </body>
 </html>
